--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -71,6 +71,7 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(fakeRawValuesPublisher)
   add_subdirectory(couplingICubHandMk2)
   add_subdirectory(couplingICubEye)
+  add_subdirectory(fineCalibrationChecker)
 if (ICUB_ICUBINTERFACE_EXPERIMENTAL)
   add_subdirectory(imu3DM_GX3)
 endif()
