Define new thread class for this tool since we cannot use updateModule being a 1 time call and not period and change module filename

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(fingertipsPortScope)
 add_subdirectory(oculus)
 add_subdirectory(wholeBodyPlayer)
 add_subdirectory(motorTemperaturePublisher)
+add_subdirectory(fineCalibrationChecker)
