--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(fakeRawDataPublisherTester)
 add_subdirectory(canLoader)
 add_subdirectory(ethLoader)
 add_subdirectory(strainCalib)
+add_subdirectory(fineCalibrationChecker)
 
 # Tools available both for Qt5
 if(ICUB_USE_Qt5)
