--- a/src/libraries/icubmod/embObjBattery/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjBattery/CMakeLists.txt
@@ -21,6 +21,7 @@ if (NOT SKIP_embObjBattery)
   target_link_libraries(embObjBattery ethResources
                         YARP::YARP_os YARP::YARP_dev YARP::YARP_sig
                         icub_firmware_shared::embot)
+  target_include_directories(embObjBattery PUBLIC "$<BUILD_INTERFACE:${YARP_COMPAT_SHIM_INCLUDE_DIR}>")
   icub_export_plugin(embObjBattery)
 
   yarp_install(TARGETS embObjBattery
@@ -35,7 +36,7 @@ if (NOT SKIP_embObjBattery)
                           YARP::YARP_os YARP::YARP_dev YARP::YARP_sig
                           icub_firmware_shared::embobj
                           icub_firmware_shared::embot)
-
+   target_include_directories(embObjBatteryUT PUBLIC "$<BUILD_INTERFACE:${YARP_COMPAT_SHIM_INCLUDE_DIR}>")
    target_include_directories(embObjBatteryUT PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")
   endif()
 
