Whole pipeline working for 1 joint setup and most of code cleaned and commented

--- a/app/fineCalibrationChecker/conf/config.ini
+++ b/app/fineCalibrationChecker/conf/config.ini
@@ -1,5 +1,6 @@
 [GENERAL]
 devicename               fineCalibrationChecker
-robotname                lego
-remoteControlBoardsList  (setup_mc)
-axesNamesList            (setup_yaw)
+robotname                torsoPitchMj1
+remoteRawValuesPort      /torsoPitchMj1/setup_rawval
+remoteControlBoardsList  (torso-pitch-mj1-setup)
+axesNamesList            (torso_pitch_mj1_real_aksim2)
