Update CMakeLists.txt and add README.md

--- a/app/fineCalibrationChecker/CMakeLists.txt
+++ b/app/fineCalibrationChecker/CMakeLists.txt
@@ -3,5 +3,8 @@
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
 set(appname fineCalibrationChecker)
-file(GLOB conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini)
-yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
+file(GLOB 
+    conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/*.ini
+    utl ${CMAKE_CURRENT_SOURCE_DIR}/*.csv
+)
+yarp_install(FILES ${conf} ${utl} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
