Start to define remapper for rawvaluespublisher nws
Update FineCalibrationChecker remapper and related. Tested and working.
Update code parsing encoder signs, need to test on robot

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -69,6 +69,7 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(rawValuesPublisherClient)
   add_subdirectory(rawValuesPublisherServer)
   add_subdirectory(fakeRawValuesPublisher)
+  add_subdirectory(rawValuesPublisherRemapper)
   add_subdirectory(couplingICubHandMk2)
   add_subdirectory(couplingICubEye)
   add_subdirectory(fineCalibrationChecker)
