--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       shell: bash
       run: |
         echo "${{ github.workspace }}/install/bin" >> $GITHUB_PATH
+        echo "${{ github.workspace }}/install/bin" >> $PATH
         echo "${{ github.workspace }}/install/lib/yarp" >> $GITHUB_PATH
         # Fix for using YARP idl generators (that link ACE) in Windows (https://github.com/robotology/idyntree/issues/569)
         echo "${VCPKG_INSTALLATION_ROOT}/installed/x64-windows/bin" >> $GITHUB_PATH
