--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,6 @@ jobs:
       shell: bash
       run: |
         echo "${{ github.workspace }}/install/bin" >> $GITHUB_PATH
-        echo "${{ github.workspace }}/install/bin" >> $PATH
         echo "${{ github.workspace }}/install/lib/yarp" >> $GITHUB_PATH
         # Fix for using YARP idl generators (that link ACE) in Windows (https://github.com/robotology/idyntree/issues/569)
         echo "${VCPKG_INSTALLATION_ROOT}/installed/x64-windows/bin" >> $GITHUB_PATH
@@ -169,6 +168,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash
       run: |
+        export PATH=$PATH:${{ github.workspace }}/install/bin
         mkdir -p build
         cd build
         cmake --preset robot -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
