--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,20 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@main
 
-    - name: Extend Path
+    - name: Extend Path [Windows]
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      run: |
+        echo "${{ github.workspace }}\install\bin" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
+        echo "${{ github.workspace }}\install\lib\yarp" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
+        echo "${env:VCPKG_INSTALLATION_ROOT}\installed\x64-windows\bin" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
+
+    - name: Extend Path [Ubuntu]
+      if: matrix.os == 'ubuntu-latest'
       shell: bash
       run: |
         echo "${{ github.workspace }}/install/bin" >> $GITHUB_PATH
         echo "${{ github.workspace }}/install/lib/yarp" >> $GITHUB_PATH
-        # Fix for using YARP idl generators (that link ACE) in Windows (https://github.com/robotology/idyntree/issues/569)
         echo "${VCPKG_INSTALLATION_ROOT}/installed/x64-windows/bin" >> $GITHUB_PATH
 
     - name: Environment Variables
@@ -61,7 +69,7 @@ jobs:
         7z x C:/vcpkg-robotology.zip -oC:/
         "VCPKG_INSTALLATION_ROOT=C:/robotology/vcpkg" >> $env:GITHUB_ENV
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Dependencies [Ubuntu]
       if: matrix.os == 'ubuntu-latest'
@@ -110,7 +118,7 @@ jobs:
           echo "icub_firmware_shared_branch=devel" >> $GITHUB_ENV
         fi
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Source-based Dependencies [Windows]
       if: matrix.os == 'windows-latest'
@@ -168,7 +176,6 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash
       run: |
-        export PATH=$PATH:${{ github.workspace }}/install/bin
         mkdir -p build
         cd build
         cmake --preset robot -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
