--- a/src/tools/yafu/CMakeLists.txt
+++ b/src/tools/yafu/CMakeLists.txt
@@ -1,5 +1,8 @@
+# Copyright: (C) 2025 iCub Facility - Istituto Italiano di Tecnologia
+# Authors: SATHISH KUMAR S
+# CopyPolicy: Released under the terms of the GNU GPL v2.0.
 # yafu - Yet_Another_Firmware_Updater
-# version: 1.0
+# version: 1.0 - 2025/11/17
 
 project(yafu)
 
